# pendragon-rust

./: Barek.txt  Cargo.toml  Herc.txt  Juliu.txt  Neo.txt  README.md
knights/: A.json  Avra.json  B.json  Baka.json  Brig.json  Cambros.json  Cargil.json  D.json  Deacon.json  E.json  Eldritch.json  Farel.json  Fin.json  G.json  Graboth.json  Gro.json  H.json  HI.json  Harod.json  Hercules.json  I.json  KO.json  Kibra.json  Lance.json  Matris.json  Milman.json  Moro.json  Nivos.json  O.json  P.json  PO.json  Po.json  U.json  Varagoth.json  Weks.json  YI.json  yo.json
src/: actions.rs  armor.rs  attack.rs  background.rs  character.rs  combat.rs  lib.rs  main.rs  rules.rs  skill.rs  weapon.rs
