[package]
name = "pendragon"
version = "0.1.0"
authors = ["toferc <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
diesel = { version = "1.4.3", features = ["postgres"]}
dotenv ="0.15.0"